fix some bottlenecks for writing and reading